--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>weDev</title>
-  <meta charset="utf-8" lang="en">
-</head>
-  <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <head>
+    <title>weDev</title>
+    <meta charset="utf-8" lang="en">
+  </head>
+    <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
-      <!--Import Materialize-Stepper CSS (after importing materialize.css) -->
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/materialize-stepper@2.1.4/materialize-stepper.css">
+  <!--Import Materialize-Stepper CSS (after importing materialize.css) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/materialize-stepper@2.1.4/materialize-stepper.css"> 
 
-      <!--import jquery-bar-rating-->
-{{!--       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-      <link rel="stylesheet" href="https://unpkg.com/jquery-bar-rating@1.2.2/dist/themes/fontawesome-stars-o.css">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> --}}
-      
+  <!--set Browser favicon-->
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/e/ed/Nyan_cat_250px_frame.PNG"></link>
 
-      <!--set Browser favicon-->
-      <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/e/ed/Nyan_cat_250px_frame.PNG"></link>
+  <link href="/css/clean-blog.min.css" rel="stylesheet">
+  <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
-      <!--Chart.js CDN-->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js"></script>
-
-{{!--         <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> --}}
-        <link href="/css/clean-blog.min.css" rel="stylesheet">
-        <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<body>
-      <ul id="dropdown1" class="dropdown-content">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <body>
+    <ul id="dropdown1" class="dropdown-content">
       <li><a href="/profile/show"><i class="material-icons">face</i>Profile</a></li>
       {{#if admin}}
       <li><a href="/dashboard"><i class="material-icons">work</i>Overview</a></li>
@@ -47,35 +34,37 @@
       <li><a href="/dashboard"><i class="material-icons">work</i>Overview</a></li>
       {{/if}} --}}
       <li><a href="/messages"><i class="material-icons">mail_outline</i>Messages</a></li>
-{{!--       <li><a href="#!"><i class="material-icons">settings</i>Settings</a></li> --}}
-
+      {{!--<li><a href="#!"><i class="material-icons">settings</i>Settings</a></li> --}}
       <li class="divider"></li>
       <li id="logout"><a href="#"><i class="material-icons">exit_to_app</i>Sign Out</a></li>
     </ul>
-  <nav class="nav-extended target">
+    <nav class="nav-extended target">
       <div class="nav-wrapper green darken-3">
         <a href="/" class="brand-logo"><i id="header-logo" class="material-icons">data_usage</i>weDev</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="/">Home</a></li>
           <li><a href="/#about-section">About</a></li>
-
           {{#if admin}}
-          <li>  <a href="/tools">Tools
-                  {{#if notify}}
-                    <span class="new badge blue-grey lighten-2">{{notify}}</span>
-                  {{/if}}
-                </a></li>
+            <li>
+              <a href="/tools">Tools
+                {{#if notify}}
+                  <span class="new badge blue-grey lighten-2">{{notify}}</span>
+                {{/if}}
+              </a>
+            </li>
           {{/if}}
           <li><a href="/posts">Browse</a></li>
-          {{#if cur_user}}
-            
-            <li><a class="dropdown-button" href="#!" data-beloworigin="true" data-alignment="right" data-constrainwidth="false" data-activates="dropdown1">{{cur_user.username}}<i class="material-icons right">arrow_drop_down</i></a></li>
+          {{#if cur_user}}  
+            <li>
+              <a class="dropdown-button" href="#!" data-beloworigin="true" data-alignment="right" data-constrainwidth="false" data-activates="dropdown1">{{cur_user.username}}
+                <i class="material-icons right">arrow_drop_down</i>
+              </a>
+            </li>
           {{else}}  
             <li><a href="/sign-up">Sign Up</a></li>
             <li><a href="/login">Login</a></li>
-          {{/if}}
-
+          {{/if}}  
         </ul>
         <ul class="side-nav" id="mobile-demo">
           <li><a href="/">Home</a></li>
@@ -84,142 +73,108 @@
             <li id="profile"><a href="/profile">Profile</a></li>
             <li id="logout"><a href="#">Sign out</a></li>
           {{else}}  
-          <li><a href="/sign-up">Sign Up</a></li>
-          <li><a href="/login">Login</a></li>
+            <li><a href="/sign-up">Sign Up</a></li>
+            <li><a href="/login">Login</a></li>
           {{/if}}
         </ul>
       </div>
-  </nav>
+    </nav>
 
-  {{{ body }}}
-  
-
-  <header></header>
-  <main></main>
-  
-
-
-
-
-<div class="footer-wrapper">
-        <footer class="page-footer tomato green darken-2">
-          <div class="footer-copyright green darken-3">
-
-            <div class="container">
+    {{{ body }}}
+    <header></header>
+    <main></main>
+    
+    <div class="footer-wrapper">
+      <footer class="page-footer tomato green darken-2">
+        <div class="footer-copyright green darken-3">
+          <div class="container">
             © 2017 Stark Labs
-            </div>
           </div>
-        </footer>
-</div>
-{{!--   // <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-  // <script src="/js/jqBootstrapValidation.js"></script>
-  // <script src="/js/contact_me.js"></script>
-  // <script src="/js/clean-blog.min.js"></script> --}}
-      <!--Import jQuery before materialize.js-->
-      <script src="/jquery/jquery.js"></script>
-      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <!--jQuery easing plugin-->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-      <!-- jQueryValidation Plugin -->
-      <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
-      <!--Import Materialize-Stepper JavaScript (after the jquery.validate.js and materialize.js) -->
-      <script src="https://cdn.jsdelivr.net/npm/materialize-stepper@2.1.4/materialize-stepper.min.js"></script>
+        </div>
+      </footer>
+    </div>
 
-      <script src="https://unpkg.com/surveyjs-widgets"></script>
+    {{!-- <script src="/jquery/jquery.js"></script>--}}
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/materialize-stepper@2.1.4/materialize-stepper.min.js"></script>
+    <script src="https://unpkg.com/surveyjs-widgets"></script>
 
-
-      <script type="text/javascript">
-        $(document).ready(function(){
-          $('.target').pushpin();
-        });
+{{!-- 
+    {{#if cur_user}}
+      <script type="text/javascript" src="js/jquery.js"></script>
+    {{/if}}
+--}}
+    {{#if cur_user}}
+      <script>
+        ;(function() {
+          $('#logout').click(function() {
+            $.post("/logout", function() {
+              window.location.href = '/';
+            });
+          });
+        })();
       </script>
-
-  <script type="text/javascript">
-    $(document).ready(function(){
-      $('.modal').modal();
-    });
-  </script>
-
-  <script type="text/javascript">
-  $(function(){
-     $('.stepper').activateStepper();
-  });
-  </script>
-
-  <script type="text/javascript">
-$(function(){
-   $('.stepper').activateStepper({
-      linearStepsNavigation: true, //allow navigation by clicking on the next and previous steps on linear steppers
-      autoFocusInput: true, //since 2.1.1, stepper can auto focus on first input of each step
-      autoFormCreation: true, //control the auto generation of a form around the stepper (in case you want to disable it)
-      showFeedbackLoader: true, //set if a loading screen will appear while feedbacks functions are running,
-      parallel: false // By default we don't assume the stepper is parallel, this is set to true when stepper has .parallel class
-   });
-});
-
-$(document).ready(function(){
-    $('.tooltipped').tooltip({delay: 50});
-  });
-
-</script>
-
-  {{#if cur_user}}
-  <script>
-    ;(function() {
-      $('#logout').click(function() {
-        $.post("/logout", function() {
-          window.location.href = '/';
-        });
-      });
-    })();
-  </script>
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript">
-
-    //var x = setInterval(
-      //function() {
+      
+      <script type="text/javascript">
         $.ajax({
           url: '/check/get/systemMessage',
           success: function (response) {
-            //console.log(response.length);
             if (response !== null){
               var i;
               var length = response.length;
               console.log(response[0]);
               for(i = 0; i < length; i++){
-                Materialize.toast(); // 4000 is the duration of the toast
+                Materialize.toast(); 
                 var $toastContent = $('<p>'+response[i].comment+'</p>').add($('<button class="btn-flat toast-action" onclick="tostClick('+response[i].id+')" >Ok</button>')).attr("id",response[i].id);
                 Materialize.toast($toastContent);
               }
             }
           }
         });
-      //}, 
-    //4000);
-    function tostClick(id){
-      $.ajax({
-          url: '/check/seen/systemMessage/'+id,
-          success: function (response) {
-            length = $('.toast').length;
-
-            console.log($('.toast'));
-            for(var i = 0; i < length ; i++){
-              if($('.toast')[i].innerHTML.indexOf("id=\""+id+"\"") >= 0 ){
-                //console.log($('.toast')[i].innerHTML);
-                $('.toast')[i].remove();
-                break;
+        function tostClick(id){
+          $.ajax({
+            url: '/check/seen/systemMessage/'+id,
+            success: function (response) {
+              length = $('.toast').length;
+              console.log($('.toast'));
+              for(var i = 0; i < length ; i++){
+                if($('.toast')[i].innerHTML.indexOf("id=\""+id+"\"") >= 0 ){
+                  $('.toast')[i].remove();
+                  break;
+                }
               }
             }
-          }
+          });
+        };
+      </script>
+    {{/if}}
+
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.modal').modal();
+      });
+      $(document).ready(function(){
+        $('.target').pushpin();
+      });
+      // $(function(){
+      //  $('.stepper').activateStepper();
+      // });
+      $(function(){
+        $('.stepper').activateStepper({
+          linearStepsNavigation: true, //allow navigation by clicking on the next and previous steps on linear steppers
+          autoFocusInput: true, //since 2.1.1, stepper can auto focus on first input of each step
+          autoFormCreation: true, //control the auto generation of a form around the stepper (in case you want to disable it)
+          showFeedbackLoader: true, //set if a loading screen will appear while feedbacks functions are running,
+          parallel: false // By default we don't assume the stepper is parallel, this is set to true when stepper has .parallel class
         });
-    };
-  </script>
-
-  {{/if}}
-
-
-</body>
-
+      });
+      $(document).ready(function(){
+        $('.tooltipped').tooltip({delay: 50});
+      });
+    </script>
+  </body>
 </html>
