--- a/views/posts/single/index.handlebars
+++ b/views/posts/single/index.handlebars
@@ -95,7 +95,7 @@
                 <div class="row control-group">
                   <div class="col s6 offset-s3">
                     <label>GitHub Link</label>
-                    <input type="text" class="form-control" style="text-align:center;" placeholder="http://GitHub.com" name="gitHub" required >
+                    <input type="text" class="form-control" style="text-align:center;" placeholder="http://GitHub.com" value="{{gitHub}}" name="gitHub" required >
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
