--- a/views/tools/users/single/index.handlebars
+++ b/views/tools/users/single/index.handlebars
@@ -16,18 +16,21 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       {{#if delete}}
- <div class="col s6 offset-s3">
-        <br><br><br><br>
-
-        <br><br><br><br>
-        <form name="delete-user" action="/quit/delete/{{user.id}}">
-          <div class="form-group col-xs-6 text-left">
-            <button type="submit" class="btn  red accent-3">Delete Account</button>
-          </div>
+        <div class="col s6 offset-s3">
+          <br><br><br><br>
+          <br><br><br><br>
+          <form name="delete-user" action="/quit/delete/{{user.id}}">
+            <div class="form-group col-xs-6 text-left">
+              <button type="submit" class="btn  red accent-3">Delete Account</button>
+            </div>
+          </form>
+          <br><br><br><br>
+          <form name="delete-user" action="/quit/reject/{{user.id}}">
+            <div class="form-group col-xs-6 text-left">
+              <button type="submit" class="btn  red accent-3">Reject Delete Request</button>
+            </div>
+          </form>
         </div>
-
-      </form>
-      </div>
       {{else}}
       <form id="editUser" name="edit-user" method="POST" action="/tools/user/{{user.username}}?_method=PUT">
         
