--- a/views/posts/review/index.handlebars
+++ b/views/posts/review/index.handlebars
@@ -43,7 +43,7 @@
 
            <div class="col s12 center-align">
               <div class="create-post">
-                <a class="btn btn-default" href="/deposit/add">Deposit more money </a>
+                <a class="btn brown lighten-1" href="/deposit/add">Deposit more money </a>
               </div>
             </div>
 </div>
